# jottery

./: CLAUDE.md  Dockerfile  ICONS.md  README.md  docker-compose.yml  index.html  jottery-spec.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.beads/: config.yaml  deletions.jsonl  issues.jsonl
scripts/: build-tui.sh
server/: .env.example  .gitignore  Cargo.toml  README.md
server/migrations/: 001_initial.sql
server/src/: config.rs  db.rs  error.rs  main.rs
server/src/api/: auth.rs  mod.rs  sync.rs
server/src/models/: client.rs  mod.rs  note.rs  sync.rs
src/: App.svelte  app.css
src/lib/components/: AttachmentList.svelte  CodeEditor.svelte  ConfirmModal.svelte  EditorPane.svelte  FileUpload.svelte  Header.svelte  KeyboardShortcuts.svelte  KeyboardShortcutsHelp.svelte  NoteList.svelte  NoteListItem.svelte  RecycleBin.svelte  ReleasesModal.svelte  SettingsModal.svelte  TagInput.svelte  UnlockScreen.svelte
src/lib/services/: attachmentRepository.ts  attachmentService.ts  autoLockService.ts  crypto.ts  db.ts  encryptionRepository.ts  exportService.ts  i18nService.ts  index.ts  initService.ts  keyManager.ts  noteRepository.ts  noteService.ts  searchService.ts  settingsRepository.ts  syncRepository.ts  syncService.ts  tagService.ts
src/lib/stores/: appStore.ts
src/lib/types/: crypto.ts  index.ts  models.ts  repository.ts  sync.ts
src/lib/utils/: dateFormat.ts
src/locales/: en-GB.json  en-US.json
tui/: .gitignore  Cargo.toml  README.md
tui/.cargo/: config.toml
tui/migrations/: 001_initial.sql
tui/src/: db.rs  export.rs  main.rs
tui/src/crypto/: key_manager.rs  mod.rs  service.rs
tui/src/models/: encryption.rs  mod.rs  note.rs  settings.rs  sync.rs
tui/src/repository/: attachment.rs  encryption.rs  mod.rs  note.rs  settings.rs  sync.rs
tui/src/ui/: app.rs  event.rs  mod.rs  terminal.rs
