[package]
name = "jottery-tui"
version = "0.1.0"
edition = "2021"
authors = ["Jottery Contributors"]
description = "Terminal User Interface for Jottery - A privacy-focused note-taking app"
license = "MIT"

[[bin]]
name = "jottery"
path = "src/main.rs"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled", "sqlcipher"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client for sync
reqwest = { version = "0.12", features = ["json"] }

# Cryptography
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Config management
dirs = "5.0"

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
